Fix overflow on settings page

--- a/src/theme/reddit-watcher-settings.scss
+++ b/src/theme/reddit-watcher-settings.scss
@@ -5,4 +5,5 @@
   color: var(--text-color);
   display: flex;
   flex-direction: column;
+  overflow-y: auto;
 }
